returns attemptId in initialization and status appends most recent
